Just hardcode redis for now, since VPC-lambdas can't access parameterstore

--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -12,15 +12,19 @@ Parameters:
 Mappings:
   VPCSettingsMap:
     test:
+      redishost: ""
       vpcsecurity: ""
       vpcsubnets: ""
     beta:
+      redishost: ""
       vpcsecurity: ""
       vpcsubnets: ""
     stag:
+      redishost: "prx-castle-staging.bbsmj9.0001.use1.cache.amazonaws.com"
       vpcsecurity: "sg-8128d3f8"
       vpcsubnets: "subnet-89ac7dff,subnet-79442344"
     prod:
+      redishost: "prx-castle-prod.bbsmj9.0001.use1.cache.amazonaws.com"
       vpcsecurity: "sg-c6eb1da1"
       vpcsubnets: "subnet-83ed9fda,subnet-414e296a,subnet-a0bce4d7,subnet-a0dfd19a"
 Resources:
@@ -99,7 +103,7 @@ Resources:
       Description: Dovetail analytics redis increments
       Environment:
         Variables:
-          PARAMSTORE_PREFIX: !Sub "/prx/${EnvironmentTypeAbbreviation}/analytics-redis"
+          REDIS_HOST: !FindInMap [VPCSettingsMap, !Ref EnvironmentTypeAbbreviation, redishost]
           REDIS_TTL: "7200"
       Handler: index.handler
       MemorySize: 256
