--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -694,6 +694,24 @@ Resources:
                   - "s3:PutObject"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", "Fn::ImportValue": !Sub "${InfrastructureStorageStackName}-InfrastructureConfigBucket", "/", !Ref InfrastructureConfigStagingKey]]
+        - PolicyName: CodeBuildPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "codebuild:BatchGetBuilds"
+                Resource:
+                  - !GetAtt CiCodeBuildProject.Arn
+        - PolicyName: CloudWatchMetricsPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "cloudwatch:PutMetricData"
+                Resource:
+                  - "*"
         - PolicyName: SnsPolicy
           PolicyDocument:
             Version: "2012-10-17"
