Fix ASG alarm namespace

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -526,7 +526,7 @@ Resources:
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: "2"
       MetricName: NetworkOut
-      Namespace: AWS/ApplicationELB
+      Namespace: AWS/EC2
       Period: "300"
       Statistic: Sum
       Threshold: "25000000000"
@@ -551,7 +551,7 @@ Resources:
       ComparisonOperator: GreaterThanThreshold
       EvaluationPeriods: "2"
       MetricName: NetworkIn
-      Namespace: AWS/ApplicationELB
+      Namespace: AWS/EC2
       Period: "300"
       Statistic: Sum
       Threshold: "150000000000"
