--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -241,6 +241,9 @@ Resources:
         VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
         VPCSubnet3: !GetAtt VPCStack.Outputs.Subnet3
         VPCCertificateArn: !GetAtt CertificateStack.Outputs.WildcardCertificateArn
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
@@ -630,6 +633,9 @@ Resources:
         OpsDebugMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsDebugMessagesSnsTopicArn"
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
