Fix platform ALB response time alarm

--- a/stacks/load-balancers.yml
+++ b/stacks/load-balancers.yml
@@ -156,7 +156,7 @@ Resources:
       OKActions:
         - !Ref OpsWarnMessagesSnsTopicArn
       AlarmDescription: >
-        Target response time value for Dovetail load balancer targets at 95th
+        Target response time value for platform load balancer targets at 95th
         percentile higher than expected
       ComparisonOperator: GreaterThanOrEqualToThreshold
       EvaluationPeriods: "1"
@@ -164,12 +164,11 @@ Resources:
       MetricName: TargetResponseTime
       Namespace: AWS/ApplicationELB
       Period: "60"
-      Threshold: "5"
+      Threshold: "0.5"
       TreatMissingData: notBreaching
       Dimensions:
         - Name: LoadBalancer
-          Value: !GetAtt DovetailALB.LoadBalancerFullName
-
+          Value: !GetAtt PlatformALB.LoadBalancerFullName
 Outputs:
   PlatformALBArn:
     Description: The ARN for the application load balancer
