--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -807,9 +807,13 @@ Resources:
         - Fn::ImportValue:
             !Sub "${NotificationsStackName}-CloudFormationNotificationSnsTopic"
       Parameters:
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue:
+            !Sub "${NotificationsStackName}-OpsWarnMessagesSnsTopicArn"
         OpsErrorMessagesSnsTopicArn:
           Fn::ImportValue:
             !Sub "${NotificationsStackName}-OpsErrorMessagesSnsTopicArn"
+        EnvironmentType: !Ref EnvironmentType
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, abbreviation]
         CodeS3Bucket:
           Fn::ImportValue:
