--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -152,7 +152,7 @@ Resources:
         Too few invocations
       ComparisonOperator: LessThanThreshold
       EvaluationPeriods: "1"
-      MetricName: Errors
+      MetricName: Invocations
       Namespace: AWS/Lambda
       Period: "300"
       Statistic: Sum
