--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -160,6 +160,10 @@ Resources:
       AlarmName: "[Upload][Lambda][Error] Invocation 4XX"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
+      InsufficientDataActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      OKActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription:
         The error rate on the upload lambda has exceeded 0
       ComparisonOperator: GreaterThanThreshold
@@ -181,6 +185,10 @@ Resources:
       AlarmName: "[Upload][Lambda][Throttles] Invocation 429"
       AlarmActions:
         - !Ref OpsErrorMessagesSnsTopicArn
+      InsufficientDataActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      OKActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription:
         Throttles on the upload lambda has exceeded 0
       ComparisonOperator: GreaterThanThreshold
@@ -201,6 +209,10 @@ Resources:
       ActionsEnabled: true
       AlarmName: "[Upload][Lambda][Duration] Unusually slow"
       AlarmActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      InsufficientDataActions:
+        - !Ref OpsErrorMessagesSnsTopicArn
+      OKActions:
         - !Ref OpsErrorMessagesSnsTopicArn
       AlarmDescription:
         At least one invocation duration exceeded 225ms
