Add CNAME for guidebook

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -1435,6 +1435,11 @@ Resources:
           Type: CNAME
           Name: !Sub mail.${Domain}
         - ResourceRecords:
+            - ghs.googlehosted.com.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub guidebook.${Domain}
+        - ResourceRecords:
             - "1 ASPMX.L.GOOGLE.COM."
             - "5 ALT1.ASPMX.L.GOOGLE.COM."
             - "5 ALT2.ASPMX.L.GOOGLE.COM."
