Add MailChimp records for prx.org

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -34,7 +34,7 @@ Resources:
         - ResourceRecords:
             - '"status-page-domain-verification=6n18jv5h9b5d"'
             - '"google-site-verification=j5qsGbnU-E37T9lsaAYL1967H0ej6iZAeX_vEWcOA-w"'
-            - '"v=spf1 include:spf.mandrillapp.com include:mail.zendesk.com include:_spf.google.com include:amazonses.com include:stspg-customer.com -all"'
+            - '"v=spf1 include:servers.mcsv.net include:spf.mandrillapp.com include:mail.zendesk.com include:_spf.google.com include:amazonses.com include:stspg-customer.com -all"'
           TTL: "300"
           Type: TXT
           Name: !Ref Domain
@@ -1448,3 +1448,14 @@ Resources:
           TTL: "300"
           Type: MX
           Name: !Ref Domain
+  MailChimp:
+    Type: "AWS::Route53::RecordSetGroup"
+    Properties:
+      Comment: MailChimp
+      HostedZoneId: !Ref HostedZone
+      RecordSets:
+        - ResourceRecords:
+            - dkim.mcsv.net.
+          TTL: "300"
+          Type: CNAME
+          Name: !Sub k1._domainkey.${Domain}
