fix the healthcheck path for exchange

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -559,7 +559,7 @@ Resources:
         ContainerPort: 3000
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
-        HealthCheckPath: "/api/v1"
+        HealthCheckPath: "/"
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
