Use an explicit image-name for ECS AMIs

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -60,6 +60,7 @@ Mappings:
     Testing:
       InstanceType: t2.micro
       InstanceStorage: 22
+      AmiName: "amzn-ami-2017.03.d-amazon-ecs-optimized"
       MinSize: "1"
       DefaultDesiredCapacity: "1"
       WarningThreshold: "2"
@@ -67,6 +68,7 @@ Mappings:
     Staging:
       InstanceType: t2.small
       InstanceStorage: 22
+      AmiName: "amzn-ami-2017.03.d-amazon-ecs-optimized"
       MinSize: "2"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "9"
@@ -74,6 +76,7 @@ Mappings:
     Production:
       InstanceType: m4.large
       InstanceStorage: 72
+      AmiName: "amzn-ami-2017.03.d-amazon-ecs-optimized"
       MinSize: "4"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "35"
@@ -141,7 +144,7 @@ Resources:
     Properties:
       ServiceToken: !GetAtt ECSAmiLookupFunction.Arn
       Region: !Ref AWS::Region
-      Rotation: 1 # Change this to trigger AMI updates
+      AmiName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, AmiName]
   # ECS Cluster and ASG
   ECSCluster:
     Type: "AWS::ECS::Cluster"
