Now upgrade prod ECS AMI

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -76,7 +76,7 @@ Mappings:
     Production:
       InstanceType: m4.large
       InstanceStorage: 72
-      AmiName: "amzn-ami-2017.03.d-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2017.09.h-amazon-ecs-optimized"
       MinSize: "4"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "35"
