Revert AMI change

--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -60,7 +60,7 @@ Mappings:
     Testing:
       InstanceType: t2.micro
       InstanceStorage: 22
-      AmiName: "amzn-ami-2017.09.h-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2017.03.d-amazon-ecs-optimized"
       MinSize: "1"
       DefaultDesiredCapacity: "1"
       WarningThreshold: "2"
@@ -68,7 +68,7 @@ Mappings:
     Staging:
       InstanceType: t2.small
       InstanceStorage: 22
-      AmiName: "amzn-ami-2017.09.h-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2017.03.d-amazon-ecs-optimized"
       MinSize: "2"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "9"
@@ -76,7 +76,7 @@ Mappings:
     Production:
       InstanceType: m4.large
       InstanceStorage: 72
-      AmiName: "amzn-ami-2017.09.h-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2017.03.d-amazon-ecs-optimized"
       MinSize: "4"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "35"
