Add exchange.prx.org A record

--- a/etc/prx.org-hosted_zone.yml
+++ b/etc/prx.org-hosted_zone.yml
@@ -366,6 +366,11 @@ Resources:
           TTL: "300"
           Type: A
           Name: !Ref Domain
+          - ResourceRecords:
+            - "199.119.122.237"
+          TTL: "300"
+          Type: A
+          Name: !Sub exchange.${Domain}
         - ResourceRecords:
             - "199.119.122.237"
           TTL: "300"
