--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -42,6 +42,17 @@ Resources:
         Type: AWS_PROXY
         IntegrationHttpMethod: POST
         Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${UploadLambdaFunction.Arn}/invocations
+  UploadRestApiSignatureMethodDummy1:
+    Type: "AWS::ApiGateway::Method"
+    Properties:
+      RestApiId: !Ref UploadRestApi
+      ResourceId: !Ref UploadRestApiSignatureResource
+      HttpMethod: POST
+      AuthorizationType: NONE
+      Integration:
+        Type: AWS_PROXY
+        IntegrationHttpMethod: POST
+        Uri: !Sub arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${UploadLambdaFunction.Arn}/invocations
   UploadRestApiOptionsMethod:
     Type: "AWS::ApiGateway::Method"
     Properties:
@@ -74,6 +85,7 @@ Resources:
     DependsOn:
       - UploadRestApiSignatureMethod
       - UploadRestApiOptionsMethod
+      - UploadRestApiSignatureMethodDummy1
     Type: "AWS::ApiGateway::Deployment"
     Properties:
       RestApiId: !Ref UploadRestApi
