Add a dummy deployment to upload API

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -89,6 +89,14 @@ Resources:
     Type: "AWS::ApiGateway::Deployment"
     Properties:
       RestApiId: !Ref UploadRestApi
+  UploadRestApiDeploymentDummy1:
+    DependsOn:
+      - UploadRestApiSignatureMethod
+      - UploadRestApiOptionsMethod
+      - UploadRestApiSignatureMethodDummy1
+    Type: "AWS::ApiGateway::Deployment"
+    Properties:
+      RestApiId: !Ref UploadRestApi
   UploadRestApiStage:
     Type: "AWS::ApiGateway::Stage"
     Properties:
