Add and use another dummy deployment for upload

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -97,13 +97,21 @@ Resources:
     Type: "AWS::ApiGateway::Deployment"
     Properties:
       RestApiId: !Ref UploadRestApi
+  UploadRestApiDeploymentDummy2:
+    DependsOn:
+      - UploadRestApiSignatureMethod
+      - UploadRestApiOptionsMethod
+      - UploadRestApiSignatureMethodDummy1
+    Type: "AWS::ApiGateway::Deployment"
+    Properties:
+      RestApiId: !Ref UploadRestApi
   UploadRestApiStage:
     Type: "AWS::ApiGateway::Stage"
     Properties:
       StageName: prod
       Description: production stage for upload lambda gateway integration
       RestApiId: !Ref UploadRestApi
-      DeploymentId: !Ref UploadRestApiDeployment
+      DeploymentId: !Ref UploadRestApiDeploymentDummy2
   # Custom Domain
   UploadRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
