Fix deployment name

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -83,7 +83,7 @@ Resources:
       StageName: !If [CreateProductionResources, prod, stag]
       Description: production stage for upload lambda gateway integration
       RestApiId: !Ref UploadRestApi
-      DeploymentId: !Ref UploadRestApiDeploymentDummy2
+      DeploymentId: !Ref UploadRestApiDeployment
   # Custom Domain
   UploadRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
