Revert to the old stage naming on upload
Will fix this better later

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -80,7 +80,7 @@ Resources:
   UploadRestApiStage:
     Type: "AWS::ApiGateway::Stage"
     Properties:
-      StageName: !If [CreateProductionResources, prod, stag]
+      StageName: !If [CreateProductionResources, prod, prod]
       Description: production stage for upload lambda gateway integration
       RestApiId: !Ref UploadRestApi
       DeploymentId: !Ref UploadRestApiDeployment
@@ -90,13 +90,13 @@ Resources:
     Properties:
       CertificateArn: !Ref WildcardCertificateArn
       DomainName: !Join ["", ["upload-", !Ref UploadRestApi, "-", !Ref "AWS::Region", !If [CreateStagingResources, ".staging", ""], ".prx.tech"]]
-  UploadRestApiBasePathMapping2:
+  UploadRestApiBasePathMapping:
     Type: "AWS::ApiGateway::BasePathMapping"
     Properties:
       # BasePath: 'prod'
       DomainName: !Ref UploadRestApiDomainName
       RestApiId: !Ref UploadRestApi
-      Stage: !If [CreateProductionResources, prod, stag]
+      Stage: !If [CreateProductionResources, prod, prod]
   UploadRestApiDomainNameRecordSetGroup:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
