Remove bad commas

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -85,10 +85,10 @@ Resources:
       RestApiId: !Ref UploadRestApi
       DeploymentId: !Ref UploadRestApiDeployment
       MethodSettings:
-        DataTraceEnabled: true,
-        HttpMethod: "*",
-        LoggingLevel: "INFO",
-        MetricsEnabled: true,
+        DataTraceEnabled: true
+        HttpMethod: "*"
+        LoggingLevel: "INFO"
+        MetricsEnabled: true
         ResourcePath: "/*"
   # Custom Domain
   UploadRestApiDomainName:
