MethodSettings is a list

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -85,11 +85,11 @@ Resources:
       RestApiId: !Ref UploadRestApi
       DeploymentId: !Ref UploadRestApiDeployment
       MethodSettings:
-        DataTraceEnabled: true
-        HttpMethod: "*"
-        LoggingLevel: "INFO"
-        MetricsEnabled: true
-        ResourcePath: "/*"
+        - DataTraceEnabled: true
+          HttpMethod: "*"
+          LoggingLevel: "INFO"
+          MetricsEnabled: true
+          ResourcePath: "/*"
   # Custom Domain
   UploadRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
