--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -150,6 +150,15 @@ Resources:
       MemorySize: 128
       Role: !GetAtt UploadLambdaIamRole.Arn
       Runtime: nodejs6.10
+      Tags:
+        - Key: Project
+          Value: upload.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
       Timeout: 5
   UploadRestApiLambdaPermission:
     Type: "AWS::Lambda::Permission"
