--- a/cloudfront/dovetail-cdn.yml
+++ b/cloudfront/dovetail-cdn.yml
@@ -41,7 +41,7 @@ Resources:
           # MinTTL:
         Enabled: true
         HttpVersion: http2
-        IsIPV6Enabled: true
+        IPV6Enabled: true
         Origins:
           - CustomOriginConfig:
               HTTPPort: 80
