--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -160,3 +160,13 @@ Resources:
           TTL: "300"
           Type: CNAME
           Name: !Sub f.${Domain}
+        - Type: A
+          Name: !Sub dovetail-cdn.${Domain}
+          AliasTarget:
+            DNSName: d123su6ttccuxp.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub dovetail-cdn.${Domain}
+          AliasTarget:
+            DNSName: d123su6ttccuxp.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
