Move listen.prx.org DNS record to prx04

--- a/dns/prx.org-hosted_zone.yml
+++ b/dns/prx.org-hosted_zone.yml
@@ -899,6 +899,11 @@ Resources:
             - "199.119.122.233"
           TTL: "300"
           Type: A
+          Name: !Sub listen.${Domain}
+        - ResourceRecords:
+            - "199.119.122.233"
+          TTL: "300"
+          Type: A
           Name: !Sub m.${Domain}
         - ResourceRecords:
             - "199.119.122.233"
@@ -1133,11 +1138,6 @@ Resources:
       Comment: Orson
       HostedZoneId: !Ref HostedZone
       RecordSets:
-        - ResourceRecords:
-            - !Sub orson.${Domain}
-          TTL: "3600"
-          Type: CNAME
-          Name: !Sub listen.${Domain}
         - ResourceRecords:
             - !Sub orson.${Domain}
           TTL: "3600"
