--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -84,6 +84,17 @@ Resources:
       Role: !GetAtt DovetailStitchLambdaExecutionIAMRole.Arn
       Runtime: nodejs6.10
       Timeout: 60
+      Tags:
+        - Key: Project
+          Value: Dovetail
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: Name
+          Value: !Sub Dovetail-Stitch-${EnvironmentType}
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   # Lambda Alarms
   # TODO: cross region monitoring for
   #  (1) errors > 0, as it should never error out
