--- a/stacks/analytics-ingest-lambda.yml
+++ b/stacks/analytics-ingest-lambda.yml
@@ -69,7 +69,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
-        S3Key: !Sub "lambda/PRX-analytics-ingest-lambda.zip"
+        S3Key: lambda/PRX-analytics-ingest-lambda.zip
         S3ObjectVersion: !Ref CodeS3ObjectVersion
       Description: Dovetail analytics to BigQuery
       Environment:
@@ -88,7 +88,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
-        S3Key: !Sub "lambda/PRX-analytics-ingest-lambda.zip"
+        S3Key: lambda/PRX-analytics-ingest-lambda.zip
         S3ObjectVersion: !Ref CodeS3ObjectVersion
       Description: Dovetail analytics http pingbacks
       Environment:
@@ -104,7 +104,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
-        S3Key: !Sub "lambda/PRX-analytics-ingest-lambda.zip"
+        S3Key: lambda/PRX-analytics-ingest-lambda.zip
         S3ObjectVersion: !Ref CodeS3ObjectVersion
       Description: Dovetail analytics redis increments
       Environment:
