--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -76,7 +76,7 @@ Resources:
     Properties:
       Code:
         S3Bucket: !Ref CodeS3Bucket
-        S3Key: !Sub "lambda/PRX-dovetail-stitch-lambda.zip"
+        S3Key: lambda/PRX-dovetail-stitch-lambda.zip
         S3ObjectVersion: !Ref CodeS3ObjectVersion
       Description: Dovetail mp3 file stitching
       Handler: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Handler]
