Add missing root param

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -81,6 +81,8 @@ Parameters:
     Type: String
   AnalyticsIngestLambdaCodeS3ObjectVersion:
     Type: String
+  DovetailStitchLambdaCodeS3ObjectVersion:
+    Type: String
   PRXUploadAccessKey:
     Type: String
   # Parameter Overrides
