Fix map lookups

--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -17,18 +17,15 @@ Parameters:
     Type: String
 Mappings:
   EnvironmentTypeMap:
-    test:
-      bucket: ""
-      handler: ""
-    beta:
-      bucket: ""
-      handler: ""
-    stag:
-      bucket: "ryan-s3.prx.org"
-      handler: "index-staging.handler"
-    prod:
-      bucket: "ryan-s3.prx.org"
-      handler: "index-production.handler"
+    Testing:
+      Bucket: ""
+      Handler: ""
+    Staging:
+      Bucket: "prx-dovetail"
+      Handler: "index-staging.handler"
+    Production:
+      Bucket: "prx-dovetail"
+      Handler: "index-production.handler"
 Resources:
   # IAM Roles
   DovetailStitchLambdaExecutionIAMRole:
