CORS Allow-Headers should be wildcard

--- a/stacks/upload.prx.org.yml
+++ b/stacks/upload.prx.org.yml
@@ -53,7 +53,7 @@ Resources:
         Type: MOCK
         IntegrationResponses:
           - ResponseParameters:
-              method.response.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+              method.response.header.Access-Control-Allow-Headers: "'*'"
               method.response.header.Access-Control-Allow-Methods: "'GET,OPTIONS'"
               method.response.header.Access-Control-Allow-Origin: "'*'"
             ResponseTemplates:
