--- a/cloudfront/dovetail-cdn.yml
+++ b/cloudfront/dovetail-cdn.yml
@@ -3,6 +3,17 @@ Description: >
   Creates a CloudFront distribution to origin-pull from a Dovetail ALB.
 Metadata:
   AWS::CloudFormation::Interface:
+    ParameterGroups:
+      - Label:
+          default: Stack Dependencies
+        Parameters:
+          - InfrastructureNotificationsStackName
+      - Label:
+          default: Distribution Parameters
+        Parameters:
+          - OriginDomain
+          - DistributionDomain
+          - DistributionDomain
     ParameterLabels:
       OriginDomain:
         default: Dovetail Origin ALB
@@ -10,6 +21,8 @@ Metadata:
         default: Domain Name
       CertificateArn:
         default: ACM Certificate Arn
+      InfrastructureNotificationsStackName:
+        default: Notifications stack name
 Parameters:
   OriginDomain:
     Type: String
