--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -60,6 +60,7 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
+                  - "s3:Head*"
                   - "s3:Get*"
                   - "s3:Put*"
                   - "s3:List*"
