--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -134,6 +134,16 @@ Resources:
           AliasTarget:
             DNSName: d123su6ttccuxp.cloudfront.net
             HostedZoneId: Z2FDTNDATAQYW2
+        - Type: A
+          Name: !Sub dovetail-cdn-staging.${Domain}
+          AliasTarget:
+            DNSName: d3lbo76wcalex1.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
+        - Type: AAAA
+          Name: !Sub dovetail-cdn-staging.${Domain}
+          AliasTarget:
+            DNSName: d3lbo76wcalex1.cloudfront.net
+            HostedZoneId: Z2FDTNDATAQYW2
   Highwinds:
     Type: "AWS::Route53::RecordSetGroup"
     Properties:
