Fix bucket access policy

--- a/stacks/dovetail-stitch-lambda.yml
+++ b/stacks/dovetail-stitch-lambda.yml
@@ -60,10 +60,13 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - "s3:Head*"
-                  - "s3:Get*"
-                  - "s3:Put*"
-                  - "s3:List*"
+                  - "s3:ListBucket"
+                Resource:
+                  - !Join ["", ["arn:aws:s3:::", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Bucket]]]
+              - Effect: Allow
+                Action:
+                  - "s3:GetObject"
+                  - "s3:PutObject"
                 Resource:
                   - !Join ["", ["arn:aws:s3:::", !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, Bucket], "/*"]]
       ManagedPolicyArns:
