--- a/cd/cd.yaml
+++ b/cd/cd.yaml
@@ -528,18 +528,16 @@ Resources:
               RunOrder: 1
         - Name: Staging
           Actions:
-            - Name: StagingDeploy
+            - Name: CreateStagingChangeSet
               ActionTypeId:
                 Category: Deploy
                 Owner: AWS
                 Provider: CloudFormation
                 Version: 1
               Configuration:
-                ActionMode: REPLACE_ON_FAILURE
+                ActionMode: CHANGE_SET_REPLACE
                 Capabilities: CAPABILITY_IAM
                 ChangeSetName: !Sub ${AWS::StackName}RootStagingChangeSet
-                RoleArn: !GetAtt CloudFormationIAMRole.Arn
-                StackName: !Sub ${AWS::StackName}-root-staging
                 ParameterOverrides: !Sub |
                   {
                     "InfrastructureStorageStackName": "${InfrastructureStorageStackName}",
@@ -548,37 +546,42 @@ Resources:
                     "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]},
                     "PipelineExecutionNonce": { "Fn::GetArtifactAtt" : ["InfrastructureRepoSourceArtifact", "ObjectKey"]}
                   }
+                RoleArn: !GetAtt CloudFormationIAMRole.Arn
+                StackName: !Sub ${AWS::StackName}-root-staging
                 TemplateConfiguration: TemplateConfigStagingZipArtifact::staging.json
                 TemplatePath: InfrastructureRepoSourceArtifact::stacks/root.yml
               InputArtifacts:
                 - Name: TemplateConfigStagingZipArtifact
                 - Name: InfrastructureRepoSourceArtifact
                 - Name: RepoStateArtifact
-              RunOrder: 1
-            - Name: CaptureStagingState
+              RunOrder: 2
+            - Name: StagingDeltaNotification
               ActionTypeId:
                 Category: Invoke
                 Owner: AWS
                 Provider: Lambda
                 Version: 1
               Configuration:
-                FunctionName: !Ref EnvironmentStateCaptureFunction
-              InputArtifacts:
-                - Name: InfrastructureRepoSourceArtifact
-                - Name: TemplateConfigStagingZipArtifact
-              RunOrder: 2
-            - Name: DeploymentNotification
+                FunctionName: !Ref ChangeSetDeltaNotificationFunction
+                UserParameters: !Sub |
+                  {
+                    "StackName": "${AWS::StackName}-root-staging",
+                    "ChangeSetName": "${AWS::StackName}RootStagingChangeSet"
+                  }
+              RunOrder: 3
+            - Name: ExecuteStagingChangeSet
               ActionTypeId:
-                Category: Invoke
+                Category: Deploy
                 Owner: AWS
-                Provider: Lambda
+                Provider: CloudFormation
                 Version: 1
               Configuration:
-                FunctionName: !Ref DeploymentNotificationFunction
-                UserParameters: Staging
-              InputArtifacts:
-                - Name: InfrastructureRepoSourceArtifact
-              RunOrder: 2
+                ActionMode: CHANGE_SET_EXECUTE
+                Capabilities: CAPABILITY_IAM
+                ChangeSetName: !Sub ${AWS::StackName}RootStagingChangeSet
+                RoleArn: !GetAtt CloudFormationIAMRole.Arn
+                StackName: !Sub ${AWS::StackName}-root-staging
+              RunOrder: 4
         - Name: Testing
           Actions:
             - Name: Acceptance
@@ -970,6 +973,62 @@ Resources:
                   - "cloudformation:DescribeChangeSet"
                   - "cloudformation:DescribeStacks"
                 Resource: "*"
+  ChangeSetDeltaNotificationFunction:
+    Type: "AWS::Lambda::Function"
+    Properties:
+      Code:
+        S3Bucket:
+          Fn::ImportValue:
+            !Sub ${InfrastructureStorageStackName}-InfrastructureSupportBucket
+        S3Key: cd/change-set-delta-notification.zip
+      Description: >
+        Sends a message about stack changes in a CodePipeline change set
+      Environment:
+        Variables:
+          SLACK_MESSAGE_RELAY_TOPIC_ARN:
+            Fn::ImportValue:
+                !Sub ${InfrastructureNotificationsStackName}-SlackMessageRelaySnsTopicArn
+          CD_STACK_NAME: !Ref AWS::StackName
+      Handler: lambda_function.lambda_handler
+      MemorySize: 128
+      Role: !GetAtt LambdaExecutionIAMRole.Arn
+      Runtime: python3.6
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
+      Timeout: 3
+  ChangeSetDeltaNotificationNotificationErrorAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: "[Infra][CD][Lambda][Error] Change Set Diff Notification"
+      AlarmActions:
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      InsufficientDataActions:
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      OKActions:
+        - Fn::ImportValue:
+            !Sub "${InfrastructureNotificationsStackName}-OpsWarnMessagesSnsTopicArn"
+      AlarmDescription: >
+        The error rate on the diff notification lambda has exceeded 0 in
+        the last minute.
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: "60"
+      Statistic: Sum
+      Threshold: "0"
+      TreatMissingData: notBreaching
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref ChangeSetDeltaNotificationFunction
   DeploymentNotificationFunction:
     Type: "AWS::Lambda::Function"
     Properties:
